frontend/apps/salvatoreemilio.it/src/styles.scss
html {
  height: 100vh;
  overflow: hidden;
  display: block;
}

body {
  height: 100%;
  overflow: hidden;
  overflow-y: auto;
  font-family: 'Lato', sans-serif;
  font-weight: 400;
  color: #0d0d0d;
  background-color: hsl(0, 0%, 95%);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
  padding: 0;
  margin: 0;
  box-sizing: border-box;

  // #202124
}

::-webkit-scrollbar {
  width: 1.25rem;
  background-color: transparent;
}

::-webkit-scrollbar-thumb {
  border-radius: 0.5625rem;
  border: 0.375rem solid rgba(0, 0, 0, 0);
  background-color: rgba(232, 234, 237, 0.16);
  background-clip: padding-box;
}

::-webkit-scrollbar-track {
  background-color: transparent;
}

